feat: new apis
