# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8000",
+    "host": "localhost:7000",
     "basePath": "/api/v1",
     "paths": {
         "/blog": {
@@ -23,8 +23,70 @@
                 "tags": [
                     "Blog"
                 ],
-                "summary": "Get Blogs.",
+                "summary": "Create Blogs.",
+                "parameters": [
+                    {
+                        "description": "Request body for creating a resource",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/forms.Blog"
+                        }
+                    }
+                ],
                 "responses": {}
+            }
+        },
+        "/blog/{id}": {
+            "put": {
+                "description": "Return list of blog.",
+                "tags": [
+                    "Blog"
+                ],
+                "summary": "Update Blogs.",
+                "operationId": "create-resource",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of models.Blog",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Request body for update a resource",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/forms.Blog"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "description": "Return list of blog.",
+                "tags": [
+                    "Blog"
+                ],
+                "summary": "Delete Blogs.",
+                "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "forms.Blog": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string",
+                    "default": "admin"
+                },
+                "title": {
+                    "type": "string"
+                }
             }
         }
     }
